--- a/src/Client/BookManagement.form
+++ b/src/Client/BookManagement.form
@@ -78,12 +78,12 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="6" rowCount="0">
-                <Column editable="true" title="Book ID" type="java.lang.Object"/>
-                <Column editable="true" title="Book Title" type="java.lang.Object"/>
-                <Column editable="true" title="Author" type="java.lang.Object"/>
-                <Column editable="true" title="Year" type="java.lang.Object"/>
-                <Column editable="true" title="Quantiti" type="java.lang.Object"/>
-                <Column editable="true" title="Price(RM)" type="java.lang.Object"/>
+                <Column editable="false" title="Book ID" type="java.lang.Object"/>
+                <Column editable="false" title="Book Title" type="java.lang.Object"/>
+                <Column editable="false" title="Author" type="java.lang.Object"/>
+                <Column editable="false" title="Year" type="java.lang.Object"/>
+                <Column editable="false" title="Quantiti" type="java.lang.Object"/>
+                <Column editable="false" title="Price(RM)" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
