--- a/src/Client/BookLoan.form
+++ b/src/Client/BookLoan.form
@@ -48,11 +48,7 @@
                           <Component id="btnDelete" min="-2" pref="97" max="-2" attributes="0"/>
                           <Group type="102" attributes="0">
                               <Component id="txtLogout" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Component id="jLabel8" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="txtSearchName" min="-2" pref="159" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="264" max="-2" attributes="0"/>
                               <Component id="jLabel9" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="cboSearchYear" min="-2" pref="81" max="-2" attributes="0"/>
@@ -85,8 +81,6 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="txtBorrowDate" alignment="1" min="-2" pref="19" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jLabel8" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="txtSearchName" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel9" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="cboSearchYear" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
@@ -154,13 +148,6 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtLogoutActionPerformed"/>
       </Events>
-    </Component>
-    <Component class="javax.swing.JLabel" name="jLabel8">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Search (by Name):"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JTextField" name="txtSearchName">
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel9">
       <Properties>
